--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,35 +1,43 @@
 ### VERSIONS ###
 [versions]
-kotlin = "1.9.23"
-spring-boot = "3.2.5"
-spring-dependencies = "1.1.4"
-webjars-jquery = "3.7.0"
-webjars-bootstrap = "5.3.1"
+kotlin = "2.0.10"
+microprofile = "6.1"
+spring-boot = "3.3.2"
+spring-dependencies = "1.1.6"
+jackson = "2.17.2"
+webjars-jquery = "3.7.1"
+webjars-bootstrap = "5.3.3"
 webjars-popper = "2.11.7"
-webjars-locator = "0.47"
-webjars-fontawesome = "6.4.2"
-thymeleaf-layout-dialect = "3.3.0"
-junit = "5.10.2"
-kotest = "5.9.0"
-mockk = "1.13.11"
+webjars-locator = "0.52"
+webjars-fontawesome = "6.5.2"
+junit = "5.10.3"
+kotest = "5.9.1"
+mockk = "1.13.12"
 google-cloud-jib = "3.4.3"
 git-properties = "2.4.2"
+liberty = "3.8.3"
 
 ### PLUGINS ###
 [plugins]
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
+kotlin-allopen = { id = "org.jetbrains.kotlin.plugin.allopen", version.ref = "kotlin" }
 kotlin-spring = { id = "org.jetbrains.kotlin.plugin.spring", version.ref = "kotlin" }
 kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 spring-boot = { id = "org.springframework.boot", version.ref = "spring-boot" }
 spring-dependencies = { id = "io.spring.dependency-management", version.ref = "spring-dependencies" }
 google-cloud-jib = { id = "com.google.cloud.tools.jib", version.ref = "google-cloud-jib" }
 git-properties = { id = "com.gorylenko.gradle-git-properties", version.ref = "git-properties" }
+liberty = { id = "io.openliberty.tools.gradle.Liberty", version.ref = "liberty" }
 
 ### LIBRARIES ###
 [libraries]
 # Kotlin
 kotlin-reflect = { module = "org.jetbrains.kotlin:kotlin-reflect" }
 kotlin-test-junit = { module = "org.jetbrains.kotlin:kotlin-test-junit" }
+# Microprofile
+microprofile = { module = "org.eclipse.microprofile:microprofile", version.ref = "microprofile" }
+# Liberty
+liberty-gradle-plugin = { module = "io.openliberty.tools:liberty-gradle-plugin", version.ref = "liberty" }
 # Spring Boot
 spring-boot-starter-web = { module = "org.springframework.boot:spring-boot-starter-web" }
 spring-boot-starter-jdbc = { module = "org.springframework.boot:spring-boot-starter-jdbc" }
@@ -37,9 +45,10 @@ spring-boot-starter-validation = { module = "org.springframework.boot:spring-boo
 spring-boot-starter-thymeleaf = { module = "org.springframework.boot:spring-boot-starter-thymeleaf" }
 # Spring Security
 spring-security-oauth2-authorization-server = { module = "org.springframework.security:spring-security-oauth2-authorization-server" }
-# Thymeleaf
-thymeleaf-layout-dialect = { module = "nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect", version.ref = "thymeleaf-layout-dialect" }
-thymeleaf-extras-spring-security = { module = "org.thymeleaf.extras:thymeleaf-extras-springsecurity6" }
+# Jackson
+jackson-module-kotlin = { module = "com.fasterxml.jackson.module:jackson-module-kotlin", version.ref = "jackson" }
+jackson-datatype-jsr310 = { module = "com.fasterxml.jackson.datatype:jackson-datatype-jsr310", version.ref = "jackson" }
+jackson-dataformat-csv = { module = "com.fasterxml.jackson.dataformat:jackson-dataformat-csv", version.ref = "jackson" }
 # Webjars
 webjars-jquery = { module = "org.webjars:jquery", version.ref = "webjars-jquery" }
 webjars-bootstrap = { module = "org.webjars:bootstrap", version.ref = "webjars-bootstrap" }
@@ -59,6 +68,10 @@ mockk = { module = "io.mockk:mockk", version.ref = "mockk" }
 
 ### BUNDLES ###
 [bundles]
+jackson = [
+    "jackson-module-kotlin",
+    "jackson-datatype-jsr310"
+]
 webjars = [
     "webjars-jquery",
     "webjars-bootstrap",
